schema/testdata/errors/operation_where_forbidden_value_expression.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        get getProfile(username) {
            //expect-error:20:36:E061:Non-boolean single operand conditions such as 'profile.identity' not permitted on @where
            @where(profile.identity)
        }
    }
}
